@@ -32,7 +32,7 @@ value of the function, and whose second argument is the gradient of the function
 (as a list of values); or None, to abort the minimization.
 """
 
-from scipy.optimize import _moduleTNC as moduleTNC
+from scipy.optimize import _tnc_module as moduleTNC
 from ._optimize import (MemoizeJac, OptimizeResult, _check_unknown_options,
                        _prepare_scalar_function)
 from ._constraints import old_bound_to_new
@@ -411,11 +411,15 @@ def _minimize_tnc(fun, x0, args=(), jac=None, bounds=None,
         else:
             maxfun = max(100, 10*len(x0))
 
-    rc, nf, nit, x = moduleTNC.minimize(func_and_grad, x0, low, up, scale,
-                                        offset, messages, maxCGit, maxfun,
-                                        eta, stepmx, accuracy, fmin, ftol,
-                                        xtol, pgtol, rescale, callback)
-
+    rc, nf, nit, x, funv, jacv = moduleTNC.tnc_minimize(
+        func_and_grad, x0, low, up, scale,
+        offset, messages, maxCGit, maxfun,
+        eta, stepmx, accuracy, fmin, ftol,
+        xtol, pgtol, rescale, callback
+    )
+    # the TNC documentation states: "On output, x, f and g may be very
+    # slightly out of sync because of scaling". Therefore re-evaluate
+    # func_and_grad so they are synced.
     funv, jacv = func_and_grad(x)
 
     return OptimizeResult(x=x, fun=funv, jac=jacv, nfev=sf.nfev,
