@@ -72,8 +72,8 @@ def configuration(parent_package='', top_path=None):
                                **lapack)
     ext._pre_build_hook = pre_build_hook
 
-    sources = ['moduleTNC.c', 'tnc.c']
-    config.add_extension('_moduleTNC',
+    sources = ['_tnc_module.c', 'tnc.c']
+    config.add_extension('_tnc_module',
                          sources=[join('tnc', x) for x in sources],
                          depends=[join('tnc', 'tnc.h')],
                          **numpy_nodepr_api)
